backend/payment-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3003"
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
  type: ClusterIP
